Fixed vertical alignment of row buttons; row buttons enable themselves

--- a/src/Row.scss
+++ b/src/Row.scss
@@ -13,6 +13,7 @@
 
 .Row {
   display: flex;
+  align-items: center;
   width: 100%;
 }
 
